This is not about links anymore, it only looks nice (too me at least)

--- a/server/sync/config/themeSettings.json
+++ b/server/sync/config/themeSettings.json
@@ -1,5 +1,6 @@
 {
-  "RandomArt": true,
-  "ArtName": "purple-computers",
-  "AccentColorFromArt": true
+  "RandomArt": false,
+  "ArtName": "astronaut",
+  "AccentColorFromArt": true,
+  "ClockFont": "Orbitron"
 }
